--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "0.17.7",
+    "react-native-web-swiper": "^2.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
